--- a/.gitignore
+++ b/.gitignore
@@ -61,4 +61,64 @@ Thumbs.db
 /out
 
 # JSON output files (optional, uncomment if needed)
-# output.json 
+# output.json
+
+# Electron specific
+.electron
+*.log
+
+# Build Artifacts
+build/
+Release/
+Debug/
+*.node
+
+# Addon build directory
+cpp-addon/build/
+
+# Optional: Vendor libraries if fetched externally
+# cpp-addon/vendor/bin/
+# cpp-addon/vendor/lib/
+# cpp-addon/vendor/include/
+
+# Node Modules
+node_modules
+
+# Operating System Files
+.DS_Store
+Thumbs.db
+
+# NPM dependency logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
+
+# Output files
+*.opendb
+*.db
+
+# IDE files
+.idea
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# Misc
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local 
