--- a/package.json
+++ b/package.json
@@ -5,22 +5,33 @@
   "main": "main.js",
   "gypfile": true,
   "scripts": {
-    "start": "electron .",
-    "dev": "electronmon .",
+    "start": "electron-forge start",
+    "dev": "electron-forge start",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "install": "cd cpp-addon && node-gyp rebuild && cd .."
+    "install": "cd cpp-addon && node-gyp rebuild && cd ..",
+    "package": "electron-forge package",
+    "make": "electron-forge make"
   },
   "author": "Brad Hardwick",
   "license": "MIT",
   "keywords": [],
   "dependencies": {
     "bindings": "^1.5.0",
+    "electron-squirrel-startup": "^1.0.1",
     "node-addon-api": "^7.1.0"
   },
   "devDependencies": {
+    "@electron-forge/cli": "^7.8.0",
+    "@electron-forge/maker-deb": "^7.8.0",
+    "@electron-forge/maker-rpm": "^7.8.0",
+    "@electron-forge/maker-squirrel": "^7.8.0",
+    "@electron-forge/maker-zip": "^7.8.0",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.8.0",
+    "@electron-forge/plugin-fuses": "^7.8.0",
+    "@electron/fuses": "^1.8.0",
     "electron": "^29.1.5",
-    "electronmon": "^2.0.2",
     "electron-rebuild": "^3.2.9",
+    "electronmon": "^2.0.2",
     "node-gyp": "^10.0.1"
   }
 }
